k8s/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: homelab
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - whoami.home
    secretName: whoami-home-tls
  rules:
  - host: whoami.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
