k8s/whoami/allow-from-ingress-nginx-to-whoami.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-nginx-whoami
  namespace: homelab
spec:
  podSelector:
    matchLabels:
      app: whoami
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
